<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".TelaCalculadora">
    <EditText
        android:id="@+id/txtVal2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/txtValor2"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVal1" />

    <EditText
        android:id="@+id/txtVal1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/txtValor1"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="344dp"
        android:layout_height="218dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVal2">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtOperacao" />
        <RadioButton
            android:id="@+id/rbSoma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSoma" />
        <RadioButton
            android:id="@+id/rbSubtracao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSubtracao" />
        <RadioButton
            android:id="@+id/rbMultiplicacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtMultiplicacao" />
        <RadioButton
            android:id="@+id/rbDivisao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtDivisao" />
    </RadioGroup>
    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>